tests/paczka1/small_fuzzy/51237481.err
Error in line 6: KHNI A927 66,2
Error in line 8: KHNI A739 39,7
Error in line 11: fRD8SKHm S418 98,0
